updated admin documentation
